<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.akatsuki.bluff.HostingActivity">

    <EditText
        android:id="@+id/in_game_name"
        android:layout_width="530dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:hint="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/in_game_name"
        android:layout_centerVertical="true"
        android:layout_marginStart="169dp">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_4" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_3" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_2" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="530dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/in_game_name"
        android:layout_below="@+id/radioGroup"
        android:layout_marginTop="38dp"
        android:onClick="toGameActivity"
        android:text="@string/host_button"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup"
        android:layout_alignStart="@+id/in_game_name"
        android:text="@string/no_of_players"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/game_ip"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="5dp"
        android:text="@string/host_ip_string"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp"
        android:layout_above="@+id/radioGroup"
        android:layout_alignEnd="@+id/in_game_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_ip"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/radioGroup" />

</RelativeLayout>